fix: decrease padding inside dropdown
affects: @entur/dropdown

to make truncation less strict

--- a/packages/dropdown/src/BaseDropdown.scss
+++ b/packages/dropdown/src/BaseDropdown.scss
@@ -1,5 +1,8 @@
 .eds-dropdown-wrapper {
   position: relative;
+  .eds-form-control {
+    padding-right: 0;
+  }
 }
 
 .eds-dropdown__input {
